// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Calls the canonical placeholder when platform is canonical and showPlaceholder is true 1`] = `
<DocumentFragment>
  <figure
    class="Figure-sc-6a3dhy-0 gJUCFc"
  >
    <div
      class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
    >
      <div
        class="StyledPlaceholder-sc-11nyhtu-0 fbxKDx"
      >
        <div
          class="GuidanceWrapper-sc-1wm6qsk-0 eqKhbn"
        >
          <strong
            aria-hidden="true"
            class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO"
          >
            Contains strong language and adult humour.
          </strong>
        </div>
        <button
          class="Button-sc-34e3rb-0 kwlSXK StyledPlayButton-sc-11nyhtu-1 egKqTy"
        >
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
          >
            Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
          </span>
          <div
            aria-hidden="true"
            class="IconWrapper-sc-34e3rb-1 jGavfg"
          >
            <svg
              class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
          </div>
          <time
            aria-hidden="true"
            class="TimeDuration-sc-34e3rb-2 cZLyLe"
            datetime="PT3M11S"
          >
            03:11
          </time>
        </button>
        <img
          alt=""
          class="StyledImg-sc-7vx2mr-0 hIxkbt"
          src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`MediaPlayer Does not Call the canonical placeholder when platform is canonical but showPlaceholder is false 1`] = `
<DocumentFragment>
  <figure
    class="Figure-sc-6a3dhy-0 gJUCFc"
  >
    <div
      class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowfullscreen=""
        class="StyledIframe-fuo2ed-0 jQWQE"
        scrolling="no"
        src="https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"
        title="Media player"
      />
    </div>
  </figure>
</DocumentFragment>
`;

exports[`MediaPlayer Renders the AMP player when platform is AMP 1`] = `
<DocumentFragment>
  <figure
    class="Figure-sc-6a3dhy-0 gJUCFc"
  >
    <div
      class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
    >
      <amp-iframe
        allowfullscreen="allowfullscreen"
        frameborder="0"
        layout="fill"
        sandbox="allow-scripts allow-same-origin"
        scrolling="no"
        src="https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
        title="Media player"
      >
        <amp-img
          alt=""
          attribution=""
          height="16"
          layout="fill"
          placeholder="true"
          src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
          width="9"
        />
      </amp-iframe>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`MediaPlayer Renders the AMP player with a caption 1`] = `
<DocumentFragment>
  <figure
    class="Figure-sc-6a3dhy-0 gJUCFc"
  >
    <div
      class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
    >
      <amp-iframe
        allowfullscreen="allowfullscreen"
        frameborder="0"
        layout="fill"
        sandbox="allow-scripts allow-same-origin"
        scrolling="no"
        src="https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
        title="Media player"
      >
        <amp-img
          alt=""
          attribution=""
          height="16"
          layout="fill"
          placeholder="true"
          src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
          width="9"
        />
      </amp-iframe>
    </div>
    <figcaption
      class="Caption-sc-16x70so-0 gDfBZX"
    >
      <span
        class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
      >
        Video caption, 
      </span>
      <p>
        Media Player With Caption
      </p>
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`MediaPlayer Renders the canonical player with a caption 1`] = `
<DocumentFragment>
  <figure
    class="Figure-sc-6a3dhy-0 gJUCFc"
  >
    <div
      class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
    >
      <div
        class="StyledPlaceholder-sc-11nyhtu-0 fbxKDx"
      >
        <div
          class="GuidanceWrapper-sc-1wm6qsk-0 eqKhbn"
        >
          <strong
            aria-hidden="true"
            class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO"
          >
            Contains strong language and adult humour.
          </strong>
        </div>
        <button
          class="Button-sc-34e3rb-0 kwlSXK StyledPlayButton-sc-11nyhtu-1 egKqTy"
        >
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
          >
            Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
          </span>
          <div
            aria-hidden="true"
            class="IconWrapper-sc-34e3rb-1 jGavfg"
          >
            <svg
              class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
          </div>
          <time
            aria-hidden="true"
            class="TimeDuration-sc-34e3rb-2 cZLyLe"
            datetime="PT3M11S"
          >
            03:11
          </time>
        </button>
        <img
          alt=""
          class="StyledImg-sc-7vx2mr-0 hIxkbt"
          src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
        />
      </div>
    </div>
    <figcaption
      class="Caption-sc-16x70so-0 gDfBZX"
    >
      <span
        class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
      >
        Video caption, 
      </span>
      <p>
        Media Player With Caption
      </p>
    </figcaption>
  </figure>
</DocumentFragment>
`;
